5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1716_2506.log
== TEST (2019-05-16 15:08:25) 
-- CODE:
qi = int(input())
pc = int(input())
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = qi + (qi+pc) - qv
	anos = anos +1
	if(a<0):
		mensagem = "EXTINCAO"
	ele:
		mensagem = "LIMITE"
	print(mensagem)	
	
-- ERROR:
File "XXXX", line 12
    ele:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:08:32) 
-- CODE:
qi = int(input())
pc = int(input())
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = qi + (qi+pc) - qv
	anos = anos +1
	if(a<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(a<0):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:08:52) 
-- CODE:
qi = int(input())
pc = int(input())
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = qi + (qi+pc) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)	
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:09:07) 
-- CODE:
qi = int(input())
pc = int(input())
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = qi + (qi+pc) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
	print(mensagem)
print(anos)
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:09:22) 
-- CODE:
qi = int(input())
pc = int(input())
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = qi + (qi+pc) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
-- OUTPUT:
LIMITE
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:09:42) 
-- CODE:
qi = int(input())
pc = int(input())
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = (qi + (qi+pc)) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
-- EXECUTION TIME:
0.209961
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
4
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
5
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:15:03) 
-- CODE:
qi = int(input())
pc = int(input())/100
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = (qi + (qi+pc)) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
-- EXECUTION TIME:
0.142335
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
4
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
5
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:15:04) 
-- CODE:
qi = int(input())
pc = int(input())/100
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = (qi + (qi+pc)) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
-- EXECUTION TIME:
0.167738
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
4
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
5
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:15:20) 
-- CODE:
qi = int(input())
pc = int(input())/100
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = (qi + (qi+pc)) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
-- OUTPUT:
LIMITE
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:17:58) 
-- CODE:
qi = int(input())
pc = int(input())/100
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = (qi + (qi*pc)) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:18:07) 
-- CODE:
qi = int(input())
pc = int(input())/100
qv = int(input())

anos = 0 

while(qi>0 and qi<12000):
	qi = (qi + (qi*pc)) - qv
	anos = anos +1
	if(qi<0):
		mensagem = "EXTINCAO"
	else:
		mensagem = "LIMITE"
print(mensagem)
print(anos)
	
-- EXECUTION TIME:
0.144788
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
